--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,9 +68,14 @@ jobs:
     - checkout
     - aws-cli/setup 
     - run:
+        name: Install Python and pip (if not already installed)
+        command: |
+          sudo apt-get update
+          sudo apt-get install -y python3 python3-pip
+    - run:
         name: Install Elastic Beanstalk CLI
         command: |
-          pip install awsebcli --upgrade
+          pip3 install awsebcli --upgrade
     - run:
         name: Deploy to Elastic Beanstalk and Set Environment Variables
         command: |
