--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
         command: |
 
           echo -e "[profile eb-cli]\naws_access_key_id = $AWS_ACCESS_KEY_ID\naws_secret_access_key = $AWS_SECRET_ACCESS_KEY" > ~/.aws/config
-          
+          cd udagram-api/
           eb use udagram-api-dev --profile eb-cli
           
           
